--- a/source/index.html
+++ b/source/index.html
@@ -7,93 +7,89 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-  <header class="page-header">
-    <a href="index.html" class="page-header__logo">
-      <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
-      <img src="img/logo2-mobile.svg" width="101" height="18" alt="Cat energy">
-    </a>
+  <header class="page__header page-header">
+    <nav class="page-header__nav">
+      <a class="page-header__logo logo" >
+        <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
+        <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
+      </a>
 
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <button class="page-header__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">
-            <a href="#">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a href="#">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
+
+      <ul class="page-header__menu site-menu">
+        <li class="site-menu__item site-menu__item--current">
+          <a class="site-menu__link">
+            Главная
+          </a>
+        </li>
+        <li class="site-menu__item">
+          <a class="site-menu__link" href="catalog.html">
+            Каталог продукции
+          </a>
+        </li>
+        <li class="site-menu__item">
+          <a class="site-menu__link" href="form.html">
+            Подбор программы
+          </a>
+        </li>
+      </ul>
     </nav>
   </header>
 
-  <main class="page-main">
+  <main class="page__main page-main">
     <h1 class="visually-hidden"> Сайт магазина "Cat energy"</h1>
 
-    <header class="page-main__header">
-      <div class="promo">
+    <header class="page-main__header promo">
         <h1 class="promo__heading">Функциональное питание для котов</h1>
         <p class="promo__text">Занялся собой? Займись котом!</p>
-        <img src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
-        <a class="promo__button" href="#">Подобрать программу</a>
-      </div>
+        <img class="promo__image" src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
+        <a class="promo__button button" href="./form.html">Подобрать программу</a>
     </header>
 
-    <section class="page-main__section catalog">
+    <section class="page-main__section catalog-sections">
       <h2 class="visually-hidden">Разделы каталога</h2>
-          <article class="catalog__item">
-            <h3 class="catalog__heading">
-              Похудение
-            </h3>
-            <p class="catalog__text">
-              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-            </p>
-            <a class="catalog__link" href="#">Каталог SLIM</a>
-          </article>
-          <article class="catalog__item">
-            <h3 class="catalog__heading">
-              Набор массы
-            </h3>
-            <p class="catalog__text">
-              Заработать авторитет среди дворовых котов и даже собак?
-              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a class="catalog__link" href="#">Каталог PRO</a>
-          </article>
+
+        <article class="catalog-sections__item">
+          <h3 class="catalog-sections__heading">Похудение</h3>
+          <p class="catalog-sections__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="catalog-sections__link" href="#">Каталог SLIM</a>
+        </article>
+
+        <article class="catalog-sections__item">
+          <h3 class="catalog-sections__heading">Набор массы</h3>
+          <p class="catalog-sections__text">
+            Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="catalog-sections__link" href="#">Каталог PRO</a>
+        </article>
     </section>
 
     <section class="page-main__section process">
-      <h2 class="process__heading">как это работает</h2>
+      <h2 class="page-main__heading">Как это работает</h2>
+
       <ul class="process__list">
-        <li class="process__item">
+        <li class="process__item process__item--leaf">
           <p class="process__text">
             Функциональное питание содержит только полезные питательные вещества.
           </p>
         </li>
-        <li class="process__item">
+        <li class="process__item process__item--powder">
           <p class="process__text">
             Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
         </li>
-        <li class="process__item">
+        <li class="process__item process__item--neal">
           <p class="process__text">
             Замените один-два приема обычной еды на наше функциональное питание.
           </p>
         </li>
-        <li class="process__item">
+        <li class="process__item process__item--weight">
           <p class="process__text">
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </p>
@@ -102,35 +98,29 @@
     </section>
 
     <section class="page-main__section example">
-      <h2 class="example__heading">Живой пример</h2>
+      <h2 class="page-main__heading">Живой пример</h2>
       <p class="example__text">
         Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок!
         При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
       </p>
       <dl class="example__list">
-        <dt class="example__title">
-          Снижение веса
-        </dt>
-        <dd class="example__definition">
-          5 кг
-        </dd>
-        <dt class="example__title">
-          Затрачено времени
-        </dt>
-        <dd class="example__definition">
-          60 дней
-        </dd>
+        <dt class="example__title">Снижение веса</dt>
+        <dd class="example__definition">5 кг</dd>
+
+        <dt class="example__title">Затрачено времени</dt>
+        <dd class="example__definition">60 дней</dd>
       </dl>
-      <p class="example__spending">
-        Затраты на питание: 15 000 руб.
-      </p>
+
+      <p class="example__spending">Затраты на питание: 15 000 руб.</p>
+
       <div class="example__images">
         <img class="example__image" src="img/example/before-mobile.png" width="280" height="232"
              alt="Фотография кота до похудения">
         <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
              alt="Фотография кота после похудения">
       </div>
+
       <div class="example__switcher switcher">
         <button class="switcher__button" type="button">Было</button>
         <button class="switcher__button" type="button">Стало</button>
@@ -139,16 +129,13 @@
 
     <footer class="page-main__footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
-      <p class="contacts__text">
-        Приглашаем к сотрудничеству дилеров!
-      </p>
-      <p class="contacts__address">
-        ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-      </p>
+
+      <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+
       <img class="contacts__map" src="img/map-mobile.png" width="640" height="724"
            alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
     </footer>
-
   </main>
 
   <footer class="page__footer page-footer">
