--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <body class="page__body">
   <header class="page__header page-header">
     <nav class="page-header__nav">
-      <div class="page-header__container">
+      <div class="page-header__bar">
         <a class="page-header__logo logo" >
           <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
           <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
@@ -44,14 +44,17 @@
     <h1 class="visually-hidden"> Сайт магазина "Cat energy"</h1>
 
     <header class="page-main__header promo">
+      <div class="promo__container container">
         <h1 class="promo__heading">Функциональное питание для котов</h1>
         <p class="promo__text">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
         <a class="promo__button button" href="./form.html">Подобрать программу</a>
+      </div>
     </header>
 
     <section class="page-main__section catalog-sections">
-      <h2 class="visually-hidden">Разделы каталога</h2>
+      <div class="catalog-sections__container container">
+        <h2 class="visually-hidden">Разделы каталога</h2>
 
         <article class="catalog-sections__item">
           <h3 class="catalog-sections__heading">Похудение</h3>
@@ -70,104 +73,119 @@
           </p>
           <a class="catalog-sections__link" href="#">Каталог PRO</a>
         </article>
+      </div>
     </section>
 
     <section class="page-main__section process">
-      <h2 class="page-main__heading">Как это работает</h2>
+      <div class="process__container container">
+        <h2 class="page-main__heading">Как это работает</h2>
 
-      <ul class="process__list">
-        <li class="process__item process__item--leaf">
-          <p class="process__text">
-            Функциональное питание содержит только полезные питательные вещества.
-          </p>
-        </li>
-        <li class="process__item process__item--powder">
-          <p class="process__text">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </p>
-        </li>
-        <li class="process__item process__item--neal">
-          <p class="process__text">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </p>
-        </li>
-        <li class="process__item process__item--weight">
-          <p class="process__text">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </p>
-        </li>
-      </ul>
+        <ul class="process__list">
+          <li class="process__item process__item--leaf">
+            <p class="process__text">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="process__item process__item--powder">
+            <p class="process__text">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="process__item process__item--neal">
+            <p class="process__text">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="process__item process__item--weight">
+            <p class="process__text">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="page-main__section example">
-      <h2 class="page-main__heading">Живой пример</h2>
-      <p class="example__text">
-        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок!
-        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-      </p>
-      <dl class="example__list">
-        <dt class="example__title">Снижение веса</dt>
-        <dd class="example__definition">5 кг</dd>
+      <div class="example__container container">
+        <div class="example__content">
+          <h2 class="page-main__heading">Живой пример</h2>
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок!
+            При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <dl class="example__list">
+            <dt class="example__title">Снижение веса</dt>
+            <dd class="example__definition">5 кг</dd>
 
-        <dt class="example__title">Затрачено времени</dt>
-        <dd class="example__definition">60 дней</dd>
-      </dl>
+            <dt class="example__title">Затрачено времени</dt>
+            <dd class="example__definition">60 дней</dd>
+          </dl>
 
-      <p class="example__spending">Затраты на питание: 15 000 руб.</p>
+          <p class="example__spending">Затраты на питание: 15 000 руб.</p>
 
-      <div class="example__images">
-        <img class="example__image" src="img/example/before-mobile.png" width="280" height="232"
-             alt="Фотография кота до похудения">
-        <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
-             alt="Фотография кота после похудения">
-      </div>
+        </div>
 
-      <div class="example__switcher switcher">
-        <button class="switcher__button" type="button">Было</button>
-        <button class="switcher__button" type="button">Стало</button>
+        <div class="example__view">
+          <div class="example__images">
+            <img class="example__image" src="img/example/before-mobile.png" width="280" height="232"
+                 alt="Фотография кота до похудения">
+            <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
+                 alt="Фотография кота после похудения">
+          </div>
+
+          <div class="example__switcher switcher">
+            <button class="switcher__button" type="button">Было</button>
+            <button class="switcher__button" type="button">Стало</button>
+          </div>
+        </div>
       </div>
     </section>
 
     <footer class="page-main__footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
 
-      <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="contacts__container container">
+        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 
-      <img class="contacts__map" src="img/map-mobile.png" width="640" height="724"
-           alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
-    </footer>
+        <img class="contacts__map" src="img/map-mobile.png" width="320" height="362"
+             alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+      </div>
+ </footer>
   </main>
 
   <footer class="page__footer page-footer">
-    <a class="page-footer__logo logo">
-      <img class="logo__sign" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
-    </a>
+    <div class="page-footer__container container">
+      <a class="page-footer__logo logo">
+        <img class="logo__sign" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
+      </a>
 
-    <ul class="page-footer__social social">
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Вконтакте</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Instagram</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Facebook</span>
-        </a>
-      </li>
-    </ul>
+      <ul class="page-footer__social social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Instagram</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Facebook</span>
+          </a>
+        </li>
+      </ul>
 
-    <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
-      <span class="visually-hidden">Разработано в</span>
-      HTML Academy
-      <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
-    </a>
+      <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="visually-hidden">Разработано в</span>
+        HTML Academy
+        <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
+      </a>
+    </div>
+
   </footer>
   </body>
 </html>
