--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,13 +2,15 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CAT ENERGY: Подбор программы</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="page__header page-header">
-    <nav class="page-header__nav">
-      <a class="page-header__logo logo" href="index.html" >
+  <nav class="page-header__nav">
+    <div class="page-header__bar">
+      <a class="page-header__logo logo" >
         <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
@@ -16,211 +18,217 @@
       <button class="page-header__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
+    </div>
 
-      <ul class="page-header__menu site-menu">
-                <li class="site-menu__item">
-                    <a class="site-menu__link" href="index.html">
-                        Главная
-                    </a>
-                </li>
-                <li class="site-menu__item  site-menu__item--current">
-                    <a class="site-menu__link">
-                        Каталог продукции
-                    </a>
-                </li>
-                <li class="site-menu__item">
-                    <a class="site-menu__link" href="form.html">
-                        Подбор программы
-                    </a>
-                </li>
-            </ul>
-    </nav>
+    <ul class="page-header__menu site-menu">
+      <li class="site-menu__item site-menu__item--current">
+        <a class="site-menu__link" href="index.html">
+          Главная
+        </a>
+      </li>
+      <li class="site-menu__item">
+        <a class="site-menu__link" href="#">
+          Каталог продукции
+        </a>
+      </li>
+      <li class="site-menu__item">
+        <a class="site-menu__link" href="form.html">
+          Подбор программы
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
 
 <main class="page__main page-main">
+  <header class="page-main__header container">
     <h1 class="page-main__heading">Каталог продукции</h1>
+  </header>
 
     <section class="page-main__section catalog-list">
-      <h2 class="visually-hidden">Список товаров</h2>
+      <div class="catalog-list__container container">
+        <h2 class="visually-hidden">Список товаров</h2>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy PRO 500 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy PRO 500 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-1-mobile.png" width="68" height="86"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-1-mobile.png" width="68" height="86"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">500 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">500 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Курица</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Курица</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">500 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">500 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-2-mobile.png" width="84" height="101"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-2-mobile.png" width="84" height="101"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">1000 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">1000 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Курица</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Курица</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">1000 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">1000 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy PRO 500 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy PRO 500 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-3-mobile.png" width="68" height="78"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-3-mobile.png" width="68" height="78"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">500 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">500 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Рыба</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Рыба</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">700 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">700 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy PRO 1000 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-4-mobile.png" width="84" height="101"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-4-mobile.png" width="84" height="101"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">1000 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">1000 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Рыба</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Рыба</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">1000 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">1000 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-5-mobile.png" width="68" height="78"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-5-mobile.png" width="68" height="78"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">500 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">500 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Гречка</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Гречка</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">400 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">400 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy SLIM 1000 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy SLIM 1000 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-6-mobile.png" width="84" height="100"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-6-mobile.png" width="84" height="100"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">1000 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">1000 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Гречка</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Гречка</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">700 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">700 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <article class="catalog-list__item card">
-        <a class="card__link">
-          <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
-        </a>
+        <article class="catalog-list__item card">
+          <a class="card__link">
+            <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
+          </a>
 
-        <img class="card__img" src="img/goods/catalog-7-mobile.png" width="72" height="84"
-             alt="" aria-hidden="true">
+          <img class="card__img" src="img/goods/catalog-7-mobile.png" width="72" height="84"
+               alt="" aria-hidden="true">
 
-        <dl class="card__list">
-          <dt class="card__title">Масса</dt>
-          <dd class="card__definition">500 г</dd>
+          <dl class="card__list">
+            <dt class="card__title">Масса</dt>
+            <dd class="card__definition">500 г</dd>
 
-          <dt class="card__title">Вкус</dt>
-          <dd class="card__definition">Рис</dd>
+            <dt class="card__title">Вкус</dt>
+            <dd class="card__definition">Рис</dd>
 
-          <dt class="card__title">Цена</dt>
-          <dd class="card__definition">500 р</dd>
-        </dl>
+            <dt class="card__title">Цена</dt>
+            <dd class="card__definition">500 р</dd>
+          </dl>
 
-        <a class="card__button button" href="#">Заказать</a>
-      </article>
+          <a class="card__button button" href="#">Заказать</a>
+        </article>
 
-      <div class="catalog-list__item show-more">
-        <p class="show-more__heading">Показать еще 100500 товаров</p>
-        <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
-        <a class="show-more__button button button--disabled" href="#">
-          Показать все
-        </a>
+        <div class="catalog-list__item show-more">
+          <p class="show-more__heading">Показать еще 100500 товаров</p>
+          <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
+          <a class="show-more__button button button--disabled" href="#">
+            Показать все
+          </a>
+        </div>
       </div>
     </section>
 
     <section class="page-main__section catalog-additional">
+      <div class="catalog-additional__container container">
         <h2 class="catalog-additional__heading">Дополнительные товары</h2>
         <ul class="catalog-additional__list">
           <li class="catalog-additional__item card-row">
-              <h3 class="card-row__heading">Сахарозаменитель</h3>
+            <h3 class="card-row__heading">Сахарозаменитель</h3>
 
-              <dl class="card-row__list">
-                <dt class="visually-hidden">Объем</dt>
-                <dd class="card-row__definition">1 упаковка (100 г)</dd>
+            <dl class="card-row__list">
+              <dt class="visually-hidden">Объем</dt>
+              <dd class="card-row__definition">1 упаковка (100 г)</dd>
 
-                <dt class="visually-hidden">Цена</dt>
-                <dd class="card-row__definition">200 р.</dd>
-              </dl>
-              <a class="card-row__button button" href="#">Заказать</a>
-            </li>
+              <dt class="visually-hidden">Цена</dt>
+              <dd class="card-row__definition">200 р.</dd>
+            </dl>
+            <a class="card-row__button button" href="#">Заказать</a>
+          </li>
 
           <li class="catalog-additional__item card-row">
             <h3 class="card-row__heading">Питьевая вода</h3>
@@ -262,53 +270,58 @@
           </li>
         </ul>
 
-      <div class="catalog-additional__promo offer">
-        <h3>Специальное предложение</h3>
-        <p class="offer__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="catalog-additional__promo offer">
+          <h3>Специальное предложение</h3>
+          <p class="offer__text">Закажите все и получите чехол для кота в подарок!</p>
+        </div>
       </div>
+
     </section>
 
   <footer class="page-main__footer contacts">
     <h2 class="visually-hidden"> Контакты компании </h2>
-    <p class="contacts__text">
-      Приглашаем к сотрудничеству дилеров!
-    </p>
-    <p class="contacts__address">
-      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-    </p>
-    <img class="contacts__map" src="img/map-mobile.png" width="640" height="724"
-         alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+
+    <div class="contacts__container container">
+      <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+
+      <img class="contacts__map" src="img/map-mobile.png" width="320" height="362"
+           alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+    </div>
   </footer>
 </main>
 
 <footer class="page__footer page-footer">
-  <a class="page-footer__logo logo">
-    <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
-  </a>
+  <div class="page-footer__container container">
+    <a class="page-footer__logo logo">
+      <img class="logo__sign" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
+    </a>
 
-  <ul class="page-footer__social social">
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Вконтакте</span>
-      </a>
-    </li>
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Instagram</span>
-      </a>
-    </li>
-    <li class="social__item">
-      <a class="social__link" href="#">
-        <span class="visually-hidden">Facebook</span>
-      </a>
-    </li>
-  </ul>
+    <ul class="page-footer__social social">
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Instagram</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#">
+          <span class="visually-hidden">Facebook</span>
+        </a>
+      </li>
+    </ul>
 
-  <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
-    <span class="visually-hidden">Разработано в</span>
-    HTML Academy
-    <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
-  </a>
+    <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
+      <span class="visually-hidden">Разработано в</span>
+      HTML Academy
+      <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
+    </a>
+  </div>
+
 </footer>
 
 </body>
